--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 .ipynb_checkpoints
 datasets/youtube_kaggle_dataset/data
+datasets/youtube_custom_dataset/api_keys
+datasets/youtube_custom_dataset/data/youtube_dislike_dataset.csv
