--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,2 @@
-google-api-python-client          2.32.0
-keras                             2.7.0
-pandas                            1.3.1
-tensorflow                        2.7.0
+google-api-python-client>=2.32.0
+pandas>=1.3.1
