--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ datasets/youtube_custom_dataset/api_keys/*
 !datasets/youtube_custom_dataset/api_keys/README.md
 datasets/youtube_custom_dataset/data/*
 !datasets/youtube_custom_dataset/data/README.md
+
+embeddings/*
+!embeddings/README.md
