--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.idea
 .ipynb_checkpoints
 
 datasets/youtube_kaggle_dataset/data/*
@@ -13,3 +14,5 @@ embeddings/*
 
 models/*
 !models/README.md
+
+article
